--- a/ch07/src/main/webapp/WEB-INF/web.xml
+++ b/ch07/src/main/webapp/WEB-INF/web.xml
@@ -27,12 +27,11 @@
 			<param-value>UTF-8</param-value>
 		</init-param>
 	</filter>
+	
+	
 	<filter-mapping>
-		<filter-name>SetCharacterEncoding</filter-name>
-		<filter-pattern>/*</filter-pattern>
-	</filter-mapping>
-	
-	
-	
+		<filter-name>CharacterEncodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>	
 	
 </web-app>
